# big_data

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml
src/: controller.cxx  controller.h  mapper.h  reducer.h  splitter.h  thread_pool.h
